Added basic HTML/CSS code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Web Calculator</h1>
+    </header>
+    <main class="container">
+
+    </main>
+    <footer>
+        <p>
+            by <a href="https://github.com/johnrds">Jonathan Rodrigues</a>
+        </p>
+        <p>
+            Copyright © <a href="https://www.theodinproject.com/about"> The Odin Project</a> 2023
+        <p>
+    </footer>
 </body>
     <script src="./js/script.js"></script>
 </html>
