--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,39 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Web Calculator</h1>
     </header>
     <main class="container">
-
+        <div class="calculator">
+            <div class="display">
+            </div>
+            <div class="buttons">
+                <div class="numbers">
+                    <div class="number9">9</div>
+                    <div class="number8">8</div>
+                    <div class="number7">7</div>
+                    <div class="number6">6</div>
+                    <div class="number5">5</div>
+                    <div class="number4">4</div>
+                    <div class="number3">3</div>
+                    <div class="number2">2</div>
+                    <div class="number1">1</div>
+                    <div class="number0">0</div>
+                    <div class="operator">=</div>
+                </div>
+                <div class="operators">
+                    <div class="operator">Del</div>
+                    <div class="operator">C</div>
+                    <div class="operator">+</div>
+                    <div class="operator">-</div>
+                    <div class="operator">*</div>
+                    <div class="operator">/</div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p>
@@ -23,5 +51,6 @@
         <p>
     </footer>
 </body>
-    <script src="./js/script.js"></script>
+<script src="./js/script.js"></script>
+
 </html>
