Add Delete button and hover effect

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
                     <div class="number2">2</div>
                     <div class="number1">1</div>
                     <div class="number0">0</div>
-                    <div class="operator">=</div>
+                    <div class="numberComma">,</div>
                 </div>
                 <div class="operators">
-                    <div class="operator">Del</div>
-                    <div class="operator">C</div>
-                    <div class="operator">+</div>
-                    <div class="operator">-</div>
-                    <div class="operator">*</div>
-                    <div class="operator">/</div>
+                    <div class="operatorDelete">Del</div>
+                    <div class="operatorClear">C</div>
+                    <div class="operatorPlus">+</div>
+                    <div class="operatorMinus">-</div>
+                    <div class="operatorTimes">*</div>
+                    <div class="operatorBy">/</div>
+                    <div class="operatorEqual">=</div>
                 </div>
             </div>
         </div>
