Added click event in every button

--- a/index.html
+++ b/index.html
@@ -15,31 +15,27 @@
     </header>
     <main class="container">
         <div class="calculator">
-            <div class="display">
-            </div>
+            <div class="display"></div>
             <div class="buttons">
-                <div class="numbers">
-                    <div class="number9">9</div>
-                    <div class="number8">8</div>
-                    <div class="number7">7</div>
-                    <div class="number6">6</div>
-                    <div class="number5">5</div>
-                    <div class="number4">4</div>
-                    <div class="number3">3</div>
-                    <div class="number2">2</div>
-                    <div class="number1">1</div>
-                    <div class="number0">0</div>
-                    <div class="numberComma">,</div>
-                </div>
-                <div class="operators">
-                    <div class="operatorDelete">Del</div>
-                    <div class="operatorClear">C</div>
-                    <div class="operatorPlus">+</div>
-                    <div class="operatorMinus">-</div>
-                    <div class="operatorTimes">*</div>
-                    <div class="operatorBy">/</div>
-                    <div class="operatorEqual">=</div>
-                </div>
+                    <div class="btn clearAll">AC</div>
+                    <div class="btn toggleMinus">+/-</div>
+                    <div class="btn percent">%</div>
+                    <div class="btn divide">/</div>
+                    <div class="btn number7">7</div>
+                    <div class="btn number8">8</div>
+                    <div class="btn number9">9</div>
+                    <div class="btn operatorTimes">*</div>
+                    <div class="btn number4">4</div>
+                    <div class="btn number5">5</div>
+                    <div class="btn number6">6</div>
+                    <div class="btn operatorMinus">-</div>
+                    <div class="btn number3">1</div>
+                    <div class="btn number2">2</div>
+                    <div class="btn number1">3</div>
+                    <div class="btn operatorPlus">+</div>
+                    <div class="btn number0">0</div>
+                    <div class="btn numberDot">.</div>
+                    <div class="btn operatorEqual">=</div>
             </div>
         </div>
     </main>
@@ -53,5 +49,4 @@
     </footer>
 </body>
 <script src="./js/script.js"></script>
-
 </html>
