Added window keyup event

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <div class="btn number0">0</div>
                     <div class="btn numberDot">.</div>
                     <div class="btn operatorEqual">=</div>
+                    <div class="btn operatorDelete">⇐</div>
             </div>
         </div>
     </main>
