Added previous calculation on display

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     </header>
     <main class="container">
         <div class="calculator">
-            <div class="display"></div>
+            <div class="display">
+                <div class="prevNumbers"></div>
+                <div class="newNumber"></div>
+            </div>
             <div class="buttons">
                     <div class="btn clearAll">AC</div>
                     <div class="btn toggleMinus">+/-</div>
